fix markdown para spacing

--- a/src/reactViews/iq/pages/chatscreen/IqChat.scss
+++ b/src/reactViews/iq/pages/chatscreen/IqChat.scss
@@ -3,12 +3,7 @@
 }
 
 .react-markdown {
-  margin: 0;
   white-space: normal;
-}
-
-.react-markdown > * {
-  margin: 0;
 }
 
 .chatscope-message {
